--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171610">Cinematic rendering – an alternative to volume rendering for 3D CT (2016)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174976">Best Startup Response to GDPR</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5110476/#">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=xo5vik">xo5vik</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 10:10:29 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://mailtrain.gen.co/archive/HJvqkHMJ7/BJTEQ1Gyl/HkfWSTffyl">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jobriant11">jobriant11</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:32:06 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
                                     32.0 points
                                 </span>
                             </td>
@@ -273,8 +273,8 @@
                                     <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 20:38:07 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    26.0 points
+                                    7 comments &nbsp;•&nbsp;
+                                    28.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
-                                    14 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     16.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175346">What we've learned about marketing on Reddit (with real data)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.indiehackers.com/@ceslami/500-signups-later-what-weve-learned-about-marketing-on-reddit-b2a31ea4c5">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ceslami">ceslami</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:04:49 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    14.0 points
+                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
+                                    14 comments &nbsp;•&nbsp;
+                                    16.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 01:30:03.765054</strong>
+            <strong>Last update at 2018-05-29 01:40:03.031647</strong>
         </div>
     </div>
 </div>
