--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:54:28 &nbsp;•&nbsp;
+                                    67 comments &nbsp;•&nbsp;
+                                    88.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17161063">Pluralization rules around the world</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -255,26 +275,6 @@
                                     2018-05-26 05:29:52 &nbsp;•&nbsp;
                                     28 comments &nbsp;•&nbsp;
                                     85.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:54:28 &nbsp;•&nbsp;
-                                    67 comments &nbsp;•&nbsp;
-                                    84.0 points
                                 </span>
                             </td>
                         </tr>
@@ -413,7 +413,7 @@
                                     <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
                                     73.0 points
                                 </span>
                             </td>
@@ -534,7 +534,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=jbredeche">jbredeche</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 18:58:07 &nbsp;•&nbsp;
                                     37 comments &nbsp;•&nbsp;
-                                    69.0 points
+                                    70.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171396">Intel accused of age discrimination</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175960">NPM proxy users receiving ERR 418 I'm a teapot</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theverge.com/2018/5/28/17401892/intel-age-discrimination-layoffs-investigation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 09:03:10 &nbsp;•&nbsp;
-                                    61 comments &nbsp;•&nbsp;
-                                    66.0 points
+                                    <a class="node" href="https://github.com/npm/npm/issues/20791">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 02:10:43 &nbsp;•&nbsp;
+                                    39 comments &nbsp;•&nbsp;
+                                    68.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 03:20:04.410153</strong>
+            <strong>Last update at 2018-05-29 03:30:03.302844</strong>
         </div>
     </div>
 </div>
