--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175498">An Open Letter to Wikipedia (2012)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.newyorker.com/books/page-turner/an-open-letter-to-wikipedia">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:58:23 &nbsp;•&nbsp;
-                                    27 comments &nbsp;•&nbsp;
-                                    39.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17171610">Cinematic rendering – an alternative to volume rendering for 3D CT (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -213,7 +193,7 @@
                                     <a class="node" href="http://www.flashingleds.net/brute_SPL-T/brute_spl-t.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tobr">tobr</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 07:50:16 &nbsp;•&nbsp;
-                                    8 comments &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
                                     37.0 points
                                 </span>
                             </td>
@@ -473,7 +453,7 @@
                                     <a class="node" href="https://vaxbarn.com/index.php/43-project/641-the-convex-computer-collection">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=TheSpiceIsLife">TheSpiceIsLife</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:13:10 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
                                     23.0 points
                                 </span>
                             </td>
@@ -526,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175346">What we've learned about marketing on Reddit (with real data)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.indiehackers.com/@ceslami/500-signups-later-what-weve-learned-about-marketing-on-reddit-b2a31ea4c5">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ceslami">ceslami</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:04:49 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
+                                    17.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172541">MiG-37B assessment: The Stealthy Soviet that never was</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175346">What we've learned about marketing on Reddit (with real data)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175969">The Crisis No One Is Talking About</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.indiehackers.com/@ceslami/500-signups-later-what-weve-learned-about-marketing-on-reddit-b2a31ea4c5">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ceslami">ceslami</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:04:49 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    16.0 points
+                                    <a class="node" href="https://globalnews.ca/news/4226936/boy-crisis-danielle-smith/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ardent_uno">ardent_uno</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 02:13:26 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
+                                    15.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 07:20:04.059366</strong>
+            <strong>Last update at 2018-05-29 07:30:03.874860</strong>
         </div>
     </div>
 </div>
