--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -346,6 +346,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172850">Revolutionary Aluminum Process Eliminates Emissions, Produces Oxygen</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.engineering.com/AdvancedManufacturing/ArticleID/16941/Revolutionary-Aluminum-Process-Eliminates-Emissions-Produces-Oxygen.aspx">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 15:15:33 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    12.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176920">Clean code practices with JavaScript</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -426,15 +446,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172850">Revolutionary Aluminum Process Eliminates Emissions, Produces Oxygen</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176274">What It’s Like When Elon Musk’s Twitter Mob Comes After You</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.engineering.com/AdvancedManufacturing/ArticleID/16941/Revolutionary-Aluminum-Process-Eliminates-Emissions-Produces-Oxygen.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 15:15:33 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.thedailybeast.com/what-its-like-when-elon-musks-twitter-mob-comes-after-you">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=a_bonobo">a_bonobo</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 03:35:27 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
-                                    10.0 points
+                                    9.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,26 +506,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176274">What It’s Like When Elon Musk’s Twitter Mob Comes After You</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.thedailybeast.com/what-its-like-when-elon-musks-twitter-mob-comes-after-you">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=a_bonobo">a_bonobo</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 03:35:27 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    8.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173560">Organ Trail</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176895">Why It's So Hard to Learn Another Language After Childhood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173122">The story barely reported by Indian media</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://time.com/5261446/language-critical-period-age/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=alberto_ol">alberto_ol</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:21:44 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    7.0 points
+                                    <a class="node" href="http://www.bbc.com/news/world-asia-india-44280188">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=satyajeet23">satyajeet23</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 16:03:31 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    8.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174075">Homebrew's Formulae and Analytics Public API</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176895">Why It's So Hard to Learn Another Language After Childhood</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://formulae.brew.sh/docs/api/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mikemcquaid">mikemcquaid</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 18:52:04 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://time.com/5261446/language-critical-period-age/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=alberto_ol">alberto_ol</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:21:44 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
                                     7.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 07:40:03.901085</strong>
+            <strong>Last update at 2018-05-29 07:50:04.980517</strong>
         </div>
     </div>
 </div>
