--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171783">The Mexican art of double entendre</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.bbc.com/travel/story/20180527-the-mexican-art-of-double-entendre">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=MiriamWeiner">MiriamWeiner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 11:07:08 &nbsp;•&nbsp;
-                                    42 comments &nbsp;•&nbsp;
-                                    35.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17174838">Why Health Insurers Don't Care About Big Bills</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    15.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17174279">Announcing the deprecation of GitHub Services</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 08:10:02.868594</strong>
+            <strong>Last update at 2018-05-29 08:20:03.459377</strong>
         </div>
     </div>
 </div>
