--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174075">Homebrew's Formulae and Analytics Public API</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://formulae.brew.sh/docs/api/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mikemcquaid">mikemcquaid</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 18:52:04 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    7.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176067">How to make a floating city in space?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -406,6 +386,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17176208">US Life Expectancy Likely to Drop for Third Straight Year</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.geek.com/science/us-life-expectancy-likely-to-drop-for-third-straight-year-1741319/?source">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sudouser">sudouser</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 03:15:20 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    5.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176111">Top API Testing Tools (Details and Updates Done for You)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 08:10:02.868594</strong>
+            <strong>Last update at 2018-05-29 08:20:03.459377</strong>
         </div>
     </div>
 </div>
